Adjusted clickable area with arrows

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,14 @@
+.clickable-arrow {
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
+  padding: 10px;
+}
+
+.arrow-center {
+  text-align: center;
+}
+
 .custom-thumbnail {
   background-color: #212529 !important;
   border-color: #212529 !important;
